# sshcon

./: meson.build
include/sshcon/: sshcon.h
src/: connect.c  main.c  meson.build  sshcon.c
